@@ -45,8 +45,8 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
       <div class="image-left"><img src="sites/all/themes/pantheon/images/package-icon-mercury-large.png" alt=""/></div>
       <h2>Mercury</h2>
       <div class="release-info">
-          <div class="release"><strong>0.8-Beta</strong></div>
-          Released: 11/18/2009 <br />
+          <div class="release"><strong>0.81-Beta</strong></div>
+          Released: 12/02/2009 <br />
           <a href="README.txt">Setup Instructions</a>
       </div> <!-- /.release-info -->
     </div> <!-- /.get-package-box -->
