@@ -1,6 +1,9 @@
-MERCURY 0.7-Beta created by Chapter Three (http://chapterthree.com)                                  10/29/09
+MERCURY 0.81-Beta created by Chapter Three (http://chapterthree.com)                                  12/02/09
 
 Thank you for using this AMI.  Please post any question/comments to http://groups.drupal.org/pantheon/
+
+0-81-Beta:
+Fixed bug where APC wasn't being used
 
 0.8-Beta:
 now using symlinks for moved mysql and varnish files
